--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,9 @@
        "memory": "16gb",
        "storage": "32gb"
     },
+    "containerEnv": {
+        "DOCKER_API_VERSION": "1.43"
+    },
     "features": {
        "ghcr.io/devcontainers/features/docker-from-docker:1": {},
        "ghcr.io/devcontainers/features/github-cli:1": {},
